<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyNotepad</string>
    <string name="action_settings">Settings</string>
    <string name="message_body">Enter your text here</string>
    <string name="title">Note Title</string>
    <string name="body">Body</string>
    <string name="action_search">Search</string>
    <string name="action_new_note">New Note</string>
    <string name="action_save">Save</string>
    <string name="action_saveas">Save As</string>
    <string name="action_recent_docs">Recent Docs</string>
    <string name="action_bkgd_color">BkgdColor Chooser</string>
    <string name="action_text_color">Text Color Chooser</string>
    <string name="redColor">RED</string>
    <string name="greenColor">Green</string>
    <string name="title_GetColorActivity">Choose Coloer</string>
    <string name="blackColor">Black</string>
    <string name="blueColor">Blue</string>
    <string name="cyanColor">Cyan</string>
    <string name="dkgrayColor">Dark Gray Color</string>
    <string name="grayColor">Gray</string>
    <string name="ltgrayColor">Light Gray</string>
    <string name="magentaColor">Magenta</string>
    <string name="transparentColor">Transparent</string>
    <string name="whiteColor">White</string>
    <string name="yellowColor">Yellow</string>
    <string name="title_activity_show_recent_documents">ShowRecentDocuments</string>
    <string name="no_notes">No Notes</string>
    <string name="title_activity_custom_dialog">CustomDialog</string>
    <string name="hello_world">Hello world!</string>

</resources>