<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <RadioButton android:id="@+id/red_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/redColor"
        android:onClick="onRadioButtonClicked"/>
    <RadioButton android:id="@+id/black_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blackColor"
        android:onClick="onRadioButtonClicked"/>
    <RadioButton android:id="@+id/blue_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blueColor"
        android:onClick="onRadioButtonClicked"/>
   <RadioButton android:id="@+id/cyan_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cyanColor"
        android:onClick="onRadioButtonClicked"/>
    <RadioButton android:id="@+id/dkgray_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dkgrayColor"
        android:onClick="onRadioButtonClicked"/>
    <RadioButton android:id="@+id/gray_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grayColor"
        android:onClick="onRadioButtonClicked"/>
    <RadioButton android:id="@+id/green_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greenColor"
        android:onClick="onRadioButtonClicked"/>
    <RadioButton android:id="@+id/ltgray_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ltgrayColor"
        android:onClick="onRadioButtonClicked"/>
    <RadioButton android:id="@+id/magenta_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/magentaColor"
        android:onClick="onRadioButtonClicked"/>
    <RadioButton android:id="@+id/transparent_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transparentColor"
        android:onClick="onRadioButtonClicked"/>
    <RadioButton android:id="@+id/white_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whiteColor"
        android:onClick="onRadioButtonClicked"/>
    <RadioButton android:id="@+id/yellow_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yellowColor"
        android:onClick="onRadioButtonClicked"/>  
</RadioGroup>


